[gd_scene load_steps=7 format=3 uid="uid://bp8b5813xtnmy"]

[ext_resource type="Texture2D" uid="uid://bwbccg0u70brq" path="res://Imports/Control/Keyboard & Mouse/Default/keyboard_0.png" id="1_gl2hm"]
[ext_resource type="Script" path="res://Scripts/Lever.gd" id="1_iy6ej"]
[ext_resource type="Texture2D" uid="uid://bgb1gxjig8ks6" path="res://Imports/Control/Keyboard & Mouse/Default/keyboard_1.png" id="2_bstsr"]
[ext_resource type="Texture2D" uid="uid://dn0d6ljtjbvac" path="res://Imports/Kenney_UI/kenney_input-prompts-pixel-16/Tiles/tile_0087.png" id="4_2g8lg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2r3yj"]
radius = 52.0096

[sub_resource type="SpriteFrames" id="SpriteFrames_qjasu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bstsr")
}],
"loop": true,
"name": &"Activated",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gl2hm")
}],
"loop": true,
"name": &"Deactivated",
"speed": 5.0
}]

[node name="Lever" type="Area2D"]
position = Vector2(-1, 0)
scale = Vector2(0.25, 0.25)
script = ExtResource("1_iy6ej")
metadata/_edit_group_ = true

[node name="LeverDetection" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2r3yj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qjasu")
animation = &"Deactivated"

[node name="E_key" type="TextureRect" parent="."]
visible = false
z_index = 100
texture_filter = 1
offset_left = -20.0
offset_top = -64.0
offset_right = 20.0
offset_bottom = -28.0
texture = ExtResource("4_2g8lg")
expand_mode = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
